test/ui/tests/fail/missing-context.rs
#[neon::export(context)]
fn missing_context() {}

fn main() {}
